# Apalinea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml  dyn.yml  master-development-branch-policy.yml
example/: CameraEL.hpp  example.cpp
include/Converter/Types/Pixel/: RGBtoHSV.hpp
include/Core/Constants/: Settings.cpp  Settings.hpp  Version.hpp
include/Core/Exception/: NotImplementedException.hpp
include/Core/Executor/: BoostExecutor.hpp  IExecutor.hpp  STLExecutor.hpp
include/Core/Heartbeat/: AbstractHeartbeat.hpp  HeartbeatState.hpp  HeartbeatTrait.hpp  IHeartbeat.hpp  IHeartbeatProcess.hpp
include/Core/Link/: AbstractLink.hpp  IBaseLink.hpp  ILink.hpp
include/Core/Link/PipeLink/: PipeLink.hpp
include/Core/Link/SinkLink/: SinkLink.hpp
include/Core/Link/SourceLink/: SourceLink.hpp
include/Core/Link/Trait/: LinkTrait.hpp
include/Core/Link/Type/: LinkType.hpp
include/Core/Link/Wrapper/: LinkWrapper.hpp
include/Core/Log/: ConsoleLog.hpp  ILog.hpp  ILogListener.hpp  LogLevel.hpp  LogLevelCategory.hpp  LogManager.hpp
include/Core/Operator/: AbstractOperator.hpp  IOperator.hpp
include/Core/Operator/PipeOperator/: AbstractPipeOperator.hpp
include/Core/Operator/ProcessState/: OperatorProcessState.hpp
include/Core/Operator/SinkOperator/: AbstractSinkOperator.hpp
include/Core/Operator/SourceOperator/: AbstractSourceOperator.hpp
include/Core/Operator/TimeBased/: AbstractTimeBased.hpp  TimeBasedTrait.hpp
include/Core/Operator/Type/: OperatorMode.hpp  OperatorType.hpp
include/Core/Plan/: Plan.hpp
include/Core/Tuple/: Tuple.hpp
include/Core/Tuple/Entry/: Entry.hpp
include/Core/Tuple/Trait/: TupleTrait.hpp
include/Core/Type/Datatype/: DtBool.hpp  DtDouble.hpp  DtFloat.hpp  DtImage.hpp  DtInt.hpp  DtInt16.hpp  DtInt32.hpp  DtInt64.hpp  DtInt8.hpp  DtNumbers.hpp  DtRegistry.hpp  DtSizeT.hpp  DtString.hpp  DtUInt16.hpp  DtUInt32.hpp  DtUInt64.hpp  DtUInt8.hpp  IDt.hpp  IDtTrait.hpp
include/Core/Type/Image/: Image.hpp  ImageFormat.hpp
include/Core/Type/Pixel/: HSV.hpp  RGB.hpp
include/Core/Type/Power/: Power.hpp
include/Core/Type/Window/: WindowId.hpp
include/Exception/: NotImplementedException.hpp
include/Expression/: AbstractExpression.hpp  Expression.hpp  ExpressionUnit.hpp  IExpression.hpp  IExpressionUnit.hpp
include/Expression/Calculation/: CalculationExpression.hpp
include/Expression/Compare/: CompareExpression.hpp
include/Expression/Datatype/: DtBoolExpression.hpp  DtDoubleExpression.hpp  DtFloatExpression.hpp  DtInt16Expression.hpp  DtInt32Expression.hpp  DtInt64Expression.hpp  DtInt8Expression.hpp  DtIntExpression.hpp  DtSizeTExpression.hpp  DtStringExpression.hpp  DtUInt16Expression.hpp  DtUInt32Expression.hpp  DtUInt64Expression.hpp  DtUInt8Expression.hpp
include/Expression/ToExpression/: ToDtBoolExpression.hpp  ToDtDoubleExpression.hpp  ToDtFloatExpression.hpp  ToDtIntExpression.hpp  ToDtStringExpression.hpp  ToStringExpression.hpp
include/Extras/Memory/: CreatorArgument.hpp  CreatorContainer.hpp  DefaultCreator.hpp  ICreator.hpp
include/Extras/Network/WebSender/: AbstractWebSender.hpp
include/Extras/Time/: Time.hpp
include/Extras/Vision/Camera/: AbstractCamera.hpp  ICamera.hpp
include/Link/: AbstractLink.hpp  IBaseLink.hpp  ILink.hpp
include/Link/PipeLink/: PipeLink.hpp
include/Link/SinkLink/: SinkLink.hpp
include/Link/SourceLink/: SourceLink.hpp
include/Link/Trait/: LinkTrait.hpp
include/Link/Type/: LinkType.hpp
include/Link/Wrapper/: LinkWrapper.hpp
include/Operator/: AbstractOperator.hpp  IOperator.hpp
include/Operator/PipeOperator/: AbstractPipeOperator.hpp  PipeOperator.hpp
include/Operator/PipeOperator/CalculatorPipeOperator/: CalculatorPipeOperator.hpp
include/Operator/PipeOperator/CropPipeOperator/: CropPipeOperator.hpp
include/Operator/PipeOperator/DetectorPipeOperator/: DetectorPipeOperator.hpp
include/Operator/PipeOperator/EnrichPipeOperator/: AbstractEnricher.hpp  (+1 more)
include/Operator/ProcessState/: OperatorProcessState.hpp
include/Operator/SinkOperator/: AbstractSinkOperator.hpp  SinkOperator.hpp
include/Operator/Source/: SourceOperator.hpp
include/Operator/SourceOperator/: AbstractSourceOperator.hpp  SourceOperator.hpp
include/Operator/Type/: OperatorMode.hpp  OperatorType.hpp
include/Tuple/: Tuple.hpp
include/Tuple/Data/: TupleData.hpp
include/Tuple/Entry/: Entry.hpp
include/Tuple/Item/: DepItem.hpp  Entry.hpp  IEvaluate.hpp  IItime.hpp  Item.hpp  ItemTrait.hpp  ItemType.hpp  ItemTypeRegistry.hpp
include/Types/Base/: StringItem.hpp  TBaseItem.hpp
include/Types/Buffer/: ELData.pb.h
include/Types/Datatype/: DtBool.cpp  DtBool.hpp  DtDouble.cpp  DtDouble.hpp  DtFloat.cpp  DtFloat.hpp  DtImage.cpp  DtImage.hpp  DtInt.cpp  DtInt.hpp  DtInt16.cpp  DtInt16.hpp  DtInt32.cpp  DtInt32.hpp  DtInt64.cpp  DtInt64.hpp  DtInt8.cpp  DtInt8.hpp  DtNumbers.hpp  DtRegistry.cpp  DtRegistry.hpp  DtSizeT.cpp  DtSizeT.hpp  DtString.hpp  DtUInt16.cpp  DtUInt16.hpp  DtUInt32.cpp  DtUInt32.hpp  DtUInt64.cpp  DtUInt64.hpp  DtUInt8.cpp  DtUInt8.hpp  IDt.hpp  IDtTrait.hpp
include/Types/Empty/: EmptyType.hpp
include/Types/Image/: Image.hpp  ImageFormat.hpp
include/Types/Pixel/: HSV.hpp  RGB.hpp
include/Types/Power/: Power.hpp  PowerType.hpp
include/Types/TupleItem/: StringItem.hpp
include/Types/Window/: WindowId.hpp
src/Core/Constants/: Settings.cpp
src/Core/Log/: LogManager.cpp
src/Core/Plan/: Plan.cpp
src/Link/: AbstractLink.cpp  ILink.cpp
src/Link/PipeLink/: PipeLink.cpp
src/Link/SinkLink/: SinkLink.cpp
src/Link/SourceLink/: SourceLink.cpp
src/Operator/: AbstractOperator.cpp  IOperator.cpp
src/Operator/Pipe/: PipeOperator.cpp
src/Operator/PipeOperator/: AbstractPipeOperator.cpp  PipeOperator.cpp
src/Operator/Sink/: SinkOperator.cpp
src/Operator/SinkOperator/: AbstractSinkOperator.cpp  SinkOperator.cpp
src/Operator/SourceOperator/: AbstractSourceOperator.cpp  SourceOperator.cpp
src/Tuple/: Tuple.cpp
src/Tuple/Data/: TupleData.cpp
src/Tuple/Item/: Item.cpp
src/Types/Buffer/: ELData.pb.c
(+58 files in other folders)
